# md2pdfy

./: .gitignore  LICENSE.txt  README.md  main.py  requirements.txt  setup.cfg  setup.py  style.css
.github/workflows/: python-app.yml
md2pdfy/: main.py
pdfy/: pdfy.py
tests/: test.md  test_pdf_creation.py
