[metadata]
name = md2pdfy
version = 0.0.3
author = Luka Nadiradze
author_email = lnadi17@freeuni.edu.ge
description = Convert markdown files into PDF format
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/lnadi17/md2pdfy
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.6
install_requires =
    pdfy>=1.1.0
    selenium>=3.141.0
    webdriver_manager>=3.3.0
    Markdown>=3.3.3
    beautifulsoup4
    PyPDF2>=1.26.0


[options.entry_points]
console_scripts =
    md2pdfy = md2pdfy.main:main
